--- a/app/src/main/res/layout/fragment_cat_breeds.xml
+++ b/app/src/main/res/layout/fragment_cat_breeds.xml
@@ -10,11 +10,30 @@
             type="io.budge.cats.ui.catbreeds.CatBreedsViewModel" />
     </data>
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.catbreeds.CatBreedsFragment">
 
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appBarLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?colorPrimary"
+            android:fitsSystemWindows="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:layout_width="match_parent"
+                android:layout_height="?actionBarSize"
+                app:titleTextColor="@android:color/white"
+                app:title="@string/cat_breeds"
+                android:fitsSystemWindows="true"
+                />
+
+        </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -51,6 +70,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
             android:id="@+id/cat_breeds_recyclerview"
             android:layout_width="match_parent"
             android:layout_marginBottom="16dp"
@@ -60,6 +80,7 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
         <com.google.android.material.progressindicator.LinearProgressIndicator
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/progressIndicator"
@@ -68,5 +89,5 @@
             android:layout_marginBottom="5dp"
             />
 
-    </FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
